<resources>
    <string name="app_name">Games</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="span">Com o nosso aplicativo será muito mais fácil e divertido manter o controle dos seus games!</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="remind">Lembrar-me</string>
    <string name="login">Login</string>
    <string name="create_account">Criar uma conta</string>
    <string name="new_account">Nova Conta</string>
    <string name="copy">Desenvolvido por DS2M</string>
    <string name="span_photo">Vamos escolher sua foto?</string>
    <string name="span_data">Dados para autenticacao</string>
    <string name="span_person_data">Dados pessoais</string>
    <string name="span_name">Qual seu nome?</string>
    <string name="span_city">Qual é sua cidade?</string>
    <string name="span_date">Data de nascimento</string>
    <string name="span_level">Qual o seu nível gamer</string>
    <string name="span_console">Qual o seu console preferido?</string>
    <string name="span_sex">Sexo:</string>
    <string name="span_sex_fem">Feminino</string>
    <string name="span_sex_masc">Masculino</string>
    <string name="span_level_exibition">Nível Exibido</string>
    <string name="span_games_finished">Jogos Terminados</string>
    <string name="span_games_current">Jogando Atualmente</string>
    <string name="span_age">Idade</string>
    <string name="span_cadastre">Seus jogos cadastrados</string>

    <string-array name="consoles">
        <item>Super Nintendo</item>
        <item>Xbox One</item>
        <item>Xbox 360</item>
        <item>Playstation 5</item>
        <item>Playstation 4</item>
        <item>Nintendo Switch</item>
    </string-array>
</resources>