<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListaJogos">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="600dp"
        android:layout_height="186dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_top" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="203dp"
        android:layout_height="33dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/rectangle_box"
        tools:layout_editor_absoluteX="231dp" />

    <EditText
        android:id="@+id/edit_text_show_nome"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_show_email"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.363" />

    <EditText
        android:id="@+id/edit_text_show_email"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        tools:layout_editor_absoluteY="57dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/span_games_finished"
        android:textColor="#E3DF6E"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_view_jogos_atualmente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:text="@string/span_games_current"
        android:textColor="#E3DF6E"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/text_view_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:text="@string/span_age"
        android:textColor="#E3DF6E"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/text_view_jogos_atualmente"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/span_level_exibition"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        tools:layout_editor_absoluteX="292dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/span_cadastre"
        android:textColor="@color/azul_button"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/cogumelo" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/joystick" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="409dp"
        android:layout_height="475dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:listitem="@layout/holder_layout" />

    <TextView
        android:id="@+id/text_view_jogos_terminados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="35"
        android:textColor="@color/fundo"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="06"
        android:textColor="@color/fundo"
        app:layout_constraintEnd_toEndOf="@+id/text_view_jogos_atualmente"
        app:layout_constraintStart_toStartOf="@+id/text_view_jogos_atualmente"
        app:layout_constraintTop_toBottomOf="@+id/text_view_jogos_atualmente" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23"
        android:textColor="@color/fundo"
        app:layout_constraintEnd_toEndOf="@+id/text_view_age"
        app:layout_constraintStart_toStartOf="@+id/text_view_age"
        app:layout_constraintTop_toBottomOf="@+id/text_view_age" />

</androidx.constraintlayout.widget.ConstraintLayout>